tests/ui/inference/need_type_info/expr-struct-type-relative-gat.stderr
error[E0282]: type annotations needed
  --> $DIR/expr-struct-type-relative-gat.rs:15:9
   |
LL |         Self::Output::Simple {};
   |         ^^^^^^^^^^^^ cannot infer type for type parameter `T` declared on the associated type `Output`
   |
note: type must be known for type parameter in this
  --> $DIR/expr-struct-type-relative-gat.rs:2:5
   |
LL |     type Output<T>;
   |     ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
